--- a/calorie_count/package.json
+++ b/calorie_count/package.json
@@ -34,8 +34,12 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.1",
+    "react-animate-css": "0.0.1",
+    "react-animated-css": "^1.0.4",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
