--- a/calorie_count/package.json
+++ b/calorie_count/package.json
@@ -2,6 +2,7 @@
   "name": "calorie_count",
   "version": "0.1.0",
   "private": true,
+  "homepage":"http://{RazvanAnisia}.github.io/{CalorieCount}",
   "dependencies": {
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
@@ -52,7 +53,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+     "deploy": "gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
